web-infras/parser/tests/fixtures/babel/core/uncategorised/552/output.txt
[SyntaxError]: Octal literals are not allowed in strict mode (2,11)
2|const a = 08;
 |         ^
